--- a/package.json
+++ b/package.json
@@ -11,10 +11,19 @@
     "react-router": "^3.0.2"
   },
   "devDependencies": {
-    "react-scripts": "0.9.4"
+    "babel-cli": "^6.18.0",
+    "babel-loader": "^6.2.1",
+    "babel-preset-es2015": "^6.18.0",
+    "chai": "^3.4.1",
+    "eslint": "^1.10.3",
+    "mocha": "^2.3.4",
+    "react-scripts": "0.9.4",
+    "webpack": "^1.12.12",
+    "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
     "test-oracle": "node ./index.js",
+    "start-server": "babel-node --presets es2015 server",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
