--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "oracledb": "^1.12.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2"
+    "react-router": "^3.0.2",
+    "request": "^2.81.0",
+    "request-promise-native": "^1.0.3"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
