--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "express": "^4.15.2",
+    "fs": "^0.0.1-security",
     "morgan": "^1.8.1",
     "oracledb": "^1.12.2",
     "react": "^15.4.2",
@@ -24,7 +25,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
-    "test-oracle": "node ./index.js",
+    "reset-oracle": "babel-node index.js",
     "start-server": "babel-node --presets es2015 server",
     "start": "react-scripts start",
     "build": "react-scripts build",
