--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "fs": "^0.0.1-security",
     "morgan": "^1.8.1",
     "oracledb": "^1.12.2",
+    "rc-table": "^5.2.15",
     "react": "^15.4.2",
+    "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
     "request": "^2.81.0",
