--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "fs": "^0.0.1-security",
     "morgan": "^1.8.1",
     "oracledb": "^1.12.2",
-    "rc-table": "^5.2.15",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
+    "react-json-table": "^0.1.1",
     "react-router": "^3.0.2",
+    "react-router-dom": "^4.0.0",
     "request": "^2.81.0",
     "request-promise-native": "^1.0.3"
   },
