--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "express": "^4.15.2",
     "fs": "^0.0.1-security",
+    "moment": "^2.18.1",
+    "moment-timezone": "^0.5.11",
     "morgan": "^1.8.1",
     "oracledb": "^1.12.2",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
     "react-json-table": "^0.1.1",
+    "react-moment": "^0.2.2",
     "react-router": "^3.0.2",
     "react-router-dom": "^4.0.0",
     "request": "^2.81.0",
