--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dateformat": "^2.0.0",
     "express": "^4.15.2",
     "fs": "^0.0.1-security",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.11",
     "morgan": "^1.8.1",
     "oracledb": "^1.12.2",
+    "queryString": "^4.3.2",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
