--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-router": "^3.0.2",
     "react-router-dom": "^4.0.0",
     "request": "^2.81.0",
-    "request-promise-native": "^1.0.3"
+    "request-promise-native": "^1.0.3",
+    "toastr": "^2.1.2",
+    "jquery": "^3.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
